--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,16 @@
 <div class="row">
 <form class="navbar-form navbar-left" role="search">
   <div class="form-group">
-    <label>Product ID</label>
-    <input ng-model="productID" type="text" class="form-control" placeholder="Product ID" ng-init="productID=5722">
+    <label>Original</label>
+    <input ng-model="art" type="text" size="80" class="form-control" placeholder="Art Path" ng-init="art='/giraffe.threadless.com/art.png'">
   </div>
   <div class="form-group">
-    <label>Type</label>
-    <input ng-model="type" type="text" class="form-control" placeholder="Type" ng-init="type='design'">
+    <label>Overlay</label>
+    <input ng-model="overlay" type="text" size="80" class="form-control" placeholder="Overlay Path" ng-init="overlay='/giraffe.threadless.com/tshirts/overlay.png'">
   </div>
   <div class="form-group">
-    <label>Image #</label>
-    <input ng-model="imageNumber" type="text" class="form-control" placeholder="Image Number" ng-init="imageNumber='01'">
+    <label>BG Color</label>
+    <input ng-model="bg" type="text" class="form-control" placeholder="BG Color Hex" ng-init="bg='451D74'">
   </div>
   <!-- <button type="submit" class="btn btn-default">Submit</button> -->
 </form>
@@ -23,39 +23,9 @@
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img ng-src="https://s3.amazonaws.com/threadless-shop/products/{{productID}}/144x216{{type}}_{{imageNumber}}.jpg" alt="{{productID}}/144x216{{type}}_{{imageNumber}}.jpg">
+      <img ng-src="{{art}}?overlay={{overlay}}&bg={{bg}}&force=1" alt="an image!"/>
       <div class="caption">
-        <h3>Original (S3)</h3>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img ng-src="https://dov5cor25da49.cloudfront.net/products/{{productID}}/144x216{{type}}_{{imageNumber}}.jpg" alt="{{productID}}/144x216{{type}}_{{imageNumber}}.jpg">
-      <div class="caption">
-        <h3>Catalog (Cloudfront)</h3>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img ng-src="https://images-backend.threadless.com/threadless-shop/products/{{productID}}/144x216{{type}}_{{imageNumber}}.jpg" alt="{{productID}}/144x216{{type}}_{{imageNumber}}.jpg">
-      <div class="caption">
-        <h3>Giraffe</h3>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img ng-src="whatever">
-      <div class="caption">
-        <h3>Artist Dashboard</h3>
+        <h3>Composited Image</h3>
       </div>
     </div>
   </div>
