--- a/templates/index.html
+++ b/templates/index.html
@@ -15,23 +15,35 @@
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <label>Original</label>
-          <input ng-model="shirt_art" type="text" size="80" class="form-control" placeholder="Art Path" ng-init="shirt_art='/giraffe.threadless.com/art.png'">
+          <input ng-model="shirt_art" type="text" size="80" class="form-control" placeholder="Art Path" ng-init="shirt_art='/giraffe.threadless.com/reference.png'" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
         </div>
         <div class="form-group">
           <label>Overlay</label>
-          <input ng-model="shirt_overlay" type="text" size="80" class="form-control" placeholder="Overlay Path" ng-init="shirt_overlay='/giraffe.threadless.com/overlays/tshirts/overlay.png'">
+          <input ng-model="shirt_overlay" type="text" size="80" class="form-control" placeholder="Overlay Path" ng-init="shirt_overlay='/giraffe.threadless.com/overlays/tshirts/guys_crew.png'" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
         </div>
         <div class="form-group">
           <label>BG Color</label>
-          <input ng-model="bg" type="text" class="form-control" placeholder="BG Color Hex" ng-init="bg='451D74'">
+          <input ng-model="bg" type="text" class="form-control" placeholder="BG Color Hex" ng-init="bg='451D74'" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+        </div>
+        <div class="form-group">
+          <label>X Offset</label>
+          <input ng-model="ox" type="text" class="form-control" placeholder="489" ng-init="ox=489" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+          <label>Y Offset</label>
+          <input ng-model="oy" type="text" class="form-control" placeholder="173" ng-init="oy=173" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+        </div>
+        <div class="form-group">
+          <label>Art Width</label>
+          <input ng-model="ow" type="text" class="form-control" placeholder="294" ng-init="ow=294" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+          <label>Art Height</label>
+          <input ng-model="oh" type="text" class="form-control" placeholder="336" ng-init="oh=336" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
         </div>
         <!-- <button type="submit" class="btn btn-default">Submit</button> -->
       </form>
       <div class="row">
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-12 col-md-12">
           <div class="thumbnail">
             <h3>Shirt Preview</h3>
-            <img ng-src="{{shirt_art}}?overlay={{shirt_overlay}}&bg={{bg}}&force=1" alt="an image!"/>
+            <img ng-src="{{shirt_art}}?overlay={{shirt_overlay}}&bg={{bg}}&ox={{ox}}&oy={{oy}}&ow={{ow}}&oh={{oh}}&force=1" alt="an image!"/>
           </div>
         </div>
       </div>
@@ -40,53 +52,40 @@
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <label>Original</label>
-          <input ng-model="iphone_art" type="text" size="80" class="form-control" placeholder="Art Path" ng-init="iphone_art='/giraffe.threadless.com/art.png'">
+          <input ng-model="iphone_art" type="text" size="80" class="form-control" placeholder="Art Path" ng-init="iphone_art='/giraffe.threadless.com/art.png'" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
         </div>
         <div class="form-group">
           <label>Overlay</label>
-          <input ng-model="iphone_overlay" type="text" size="80" class="form-control" placeholder="Overlay Path" ng-init="iphone_overlay='/giraffe.threadless.com/overlays/iphones/iphone6-barelythere.png'">
+          <input ng-model="iphone_overlay" type="text" size="80" class="form-control" placeholder="Overlay Path" ng-init="iphone_overlay='/giraffe.threadless.com/overlays/iphones/iphone6-barelythere.png'" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
         </div>
         <div class="form-group">
           <label>BG Color</label>
-          <input ng-model="bg" type="text" class="form-control" placeholder="BG Color Hex" ng-init="bg='451D74'">
+          <input ng-model="bg" type="text" class="form-control" placeholder="BG Color Hex" ng-init="bg='451D74'" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+        </div>
+        <div class="form-group">
+          <label>X Offset</label>
+          <input ng-model="iox" type="text" class="form-control" placeholder="418" ng-init="iox=418" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+          <label>Y Offset</label>
+          <input ng-model="ioy" type="text" class="form-control" placeholder="211" ng-init="ioy=211" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+        </div>
+        <div class="form-group">
+          <label>Art Width</label>
+          <input ng-model="iow" type="text" class="form-control" placeholder="436" ng-init="iow=436" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }">
+          <label>Art Height</label>
+          <input ng-model="ioh" type="text" class="form-control" placeholder="498" ng-init="ioh=498" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }"
         </div>
         <!-- <button type="submit" class="btn btn-default">Submit</button> -->
       </form>
       <div class="row">
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-12 col-md-12">
           <div class="thumbnail">
             <h3>Iphone Preview</h3>
-            <img ng-src="{{iphone_art}}?overlay={{iphone_overlay}}&bg={{bg}}&force=1" alt="an image!"/>
+            <img ng-src="{{iphone_art}}?overlay={{iphone_overlay}}&bg={{bg}}&ox={{iox}}&oy={{ioy}}&ow={{iow}}&oh={{ioh}}&force=1" alt="an image!"/>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-<!-- <form class="navbar-form navbar-left" role="search"> -->
-<!--   <div class="form-group"> -->
-<!--     <label>Original</label> -->
-<!--     <input ng-model="iphone_art" type="text" size="80" class="form-control" placeholder="Art Path" ng-init="iphone_art='/giraffe.threadless.com/art.png'"> -->
-<!--   </div> -->
-<!--   <div class="form-group"> -->
-<!--     <label>Overlay</label> -->
-<!--     <input ng-model="iphone_overlay" type="text" size="80" class="form-control" placeholder="Overlay Path" ng-init="iphone_overlay='/giraffe.threadless.com/overlays/iphones/iphone6-barelythere.png'"> -->
-<!--   </div> -->
-<!--   <div class="form-group"> -->
-<!--     <label>BG Color</label> -->
-<!--     <input ng-model="bg" type="text" class="form-control" placeholder="BG Color Hex" ng-init="bg='451D74'"> -->
-<!--   </div> -->
-<!--   <\!-- <button type="submit" class="btn btn-default">Submit</button> -\-> -->
-<!-- </form> -->
-<!-- </div> -->
-<!-- <div class="row"> -->
-<!--   <div class="col-sm-6 col-md-4"> -->
-<!--     <div class="thumbnail"> -->
-<!--       <h3>iPhone Preview</h3> -->
-<!--       <img ng-src="{{iphone_art}}?overlay={{iphone_overlay}}&bg={{bg}}&force=1" alt="an image!"/> -->
-<!--     </div> -->
-<!--   </div> -->
-<!-- </div> -->
 
 {% endraw %}
 </div>
